--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 src="images/pdf.png" /></a>
     </div>
     <!--script src="track/public/polyfill.js?v=1536475558698"></script-->
-    <!--script-- src="track/public/track.js?v=1536475558698"></script-->
+    <script src="https://kissarat.github.io/track/public/track.js?v=1557262896259"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js"
         integrity="sha256-VBLiveTKyUZMEzJd6z2mhfxIqz3ZATCuVMawPZGzIfA=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.21/vue.min.js"
