--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <span itemprop="givenName">Taras</span>
                         <span itemprop="familyName">Labiak</span>
                     </h1>
-                    <h2>PHP, Node.js, Python Full Stack Developer</h2>
+                    <h2 class="notranslate">PHP, Node.js, Python Full Stack Developer</h2>
                     <!--<a class="export">PDF</a>-->
                     <div class="abstract">
                         <div class="tile">
@@ -121,14 +121,14 @@
                         <ul>
                             <li>Software designing and architecting</li>
                             <li><a href="https://en.wikipedia.org/wiki/PHP">PHP</a></li>
-                            <li><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>/ES6</li>
+                            <li class="notranslate"><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>/ES6</li>
                             <li><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a></li>
-                            <li><a href="https://en.wikipedia.org/wiki/C%2B%2B">C++</a></li>
-                            <li><a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)">C#</a></li>
+                            <li><a href="https://en.wikipedia.org/wiki/C%2B%2B" class="notranslate">C++</a></li>
+                            <li><a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" class="notranslate">C#</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
-                            <li><a href="https://en.wikipedia.org/wiki/Go_(programming_language)">Go</a></li>
-                            <li><a href="https://en.wikipedia.org/wiki/Solidity">Solidity</a></li>
+                            <li><a href="https://en.wikipedia.org/wiki/Go_(programming_language)" class="notranslate">Go</a></li>
+                            <li><a href="https://en.wikipedia.org/wiki/Solidity" class="notranslate">Solidity</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/ERC-20">ERC-20</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Bash_(Unix_shell)">Bash</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/SQL">SQL</a></li>
@@ -139,7 +139,7 @@
                             <li><a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">CSS</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)">Bootstrap</a>
                             </li>
-                            <li><a href="https://semantic-ui.com/">Semantic UI</a></li>
+                            <li><a href="https://semantic-ui.com/" class="notranslate">Semantic UI</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Vue.js">Vue.js</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/React_(JavaScript_library)">React.js</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Redux_(JavaScript_library)">Redux</a></li>
@@ -148,13 +148,13 @@
                             <li><a href="https://en.wikipedia.org/wiki/webpack">webpack</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Gulp.js">Gulp.js</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Node.js">Node.js</a></li>
-                            <li><a href="https://en.wikipedia.org/wiki/Electron_(software_framework)">Electron</a></li>
+                            <li><a href="https://en.wikipedia.org/wiki/Electron_(software_framework)" class="notranslate">Electron</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/express.js">express.js</a></li>
                             <li><a href="https://strapi.io">strapi</a></li>
-                            <li><a href="https://en.wikipedia.org/wiki/Stripe_(company)">Stripe</a></li>
+                            <li><a href="https://en.wikipedia.org/wiki/Stripe_(company)" class="notranslate">Stripe</a></li>
                             <li><a href="https://knexjs.org">knex.js</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Meteor_(web_framework)">Meteor</a></li>
-                            <li><a href="https://en.wikipedia.org/wiki/REST">REST</a>/HTTP</li>
+                            <li class="notranslate"><a href="https://en.wikipedia.org/wiki/REST">REST</a>/HTTP</li>
                             <li><a href="https://en.wikipedia.org/wiki/WebSocket">WebSocket</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/WebRTC">WebRTC</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Yii">Yii</a> 2</li>
@@ -175,18 +175,18 @@
                             <li><a href="https://en.wikipedia.org/wiki/Docker_(software)">Docker</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Nginx">Nginx</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Linux">Linux</a> web server configuration</li>
-                            <li><a href="https://en.wikipedia.org/wiki/macOS">macOS</a> workstation</li>
+                            <li><a href="https://en.wikipedia.org/wiki/macOS">macOS</a> as workstation</li>
                             <li><a href="https://aws.amazon.com/ru/iot-core/">MQTT</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Ethereum">Ethereum</a>
-                                (<a href="https://www.parity.io/">parity</a>)
+                                <span class="notranslate">(<a href="https://www.parity.io/">parity</a>)</span>
                                 node configuration and usage through API
                             </li>
                             <li><a href="https://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93controller">MVC</a>
                             </li>
                             <li><a href="https://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93viewmodel">MVVM</a>
                             </li>
-                            <li><a href="https://en.wikipedia.org/wiki/Software_design_pattern">Design pattern</a></li>
+                            <li><a href="https://en.wikipedia.org/wiki/Software_design_pattern" class="notranslate">Design patterns</a></li>
                         </ul>
                     </dd>
                     <dt>Experience</dt>
@@ -198,7 +198,7 @@
                         </div>
                         <div v-if="original">
                             <div class="item" v-for="job in jobs">
-                                <h4>{{ job.name }}</h4>
+                                <h4 class="notranslate">{{ job.name }}</h4>
                                 <div class="properties">
                                     <div v-for="property in describe(job)" v-if="property">
                                         <span class="label">{{ property.label }}:</span>
@@ -232,28 +232,28 @@
                     <dt>Own Projects</dt>
                     <dd>
                         <dl>
-                            <dt>Auxiliary</dt>
+                            <dt class="notranslate">Auxiliary</dt>
                             <dd>Utilities NPM package (like lodash) <a
                                     href="https://github.com/kissarat/auxiliary">https://www.npmjs.com/package/auxiliary</a>
                             </dd>
-                            <dt>Never Loose</dt>
+                            <dt class="notranslate">Never Loose</dt>
                             <dd>Google Chrome extension
                                 (<a
                                     href="https://github.com/kissarat/never-lose">https://github.com/kissarat/never-lose</a>)
                                 that makes snapshots at
                                 achive.org of any pages every visit
                             </dd>
-                            <dt>Dominant</dt>
+                            <dt class="notranslate">Dominant</dt>
                             <dd>Google Chrome extension (<a
                                     href="https://github.com/kissarat/dominant">https://github.com/kissarat/dominant</a>)
                                 for commenting any
                                 element of any HTML page. User can see comment of other users
                             </dd>
-                            <dt>prom.ua JSON gateway</dt>
+                            <dt class="notranslate">prom.ua JSON gateway</dt>
                             <dd>Gateway, that accepts any URL of prom.ua, parse appropriate page and respond in JSON
                                 format <a href="https://github.com/kissarat/prom">https://github.com/kissarat/prom</a>
                             </dd>
-                            <dt>Code Commenter</dt>
+                            <dt class="notranslate">Code Commenter</dt>
                             <dd>Web application for commenting of lines of Python code with own syntax highlighter
                                 <a href="https://github.com/kissarat/coco">https://github.com/kissarat/coco</a></dd>
                         </dl>
@@ -273,7 +273,7 @@
         integrity="sha256-ui3vFTgbIIvd9ePh+wF+ju05O3jympV4FyFlpNMV2cw=" crossorigin="anonymous"></script>
     <script src="https://kissarat.github.io/script.js"></script>
     <div id="hired" style="opacity: 0; display: none">
-        <h1>Hired by <a href="http://www.ukeess.com/">UKEESS</a></h1>
+        <h1>I am hired by <a href="http://www.ukeess.com/">UKEESS</a></h1>
     </div>
 </body>
 
