--- a/comparator/index.html
+++ b/comparator/index.html
@@ -38,6 +38,20 @@
     </style>
 </head>
 <body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-58031952-14"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+
+  gtag('js', new Date());
+
+  gtag('config', 'UA-58031952-14');
+</script>
+
 <div id="app">
     <header>
         <button type="button" id="convert" disabled>Convert</button>
