--- a/word-search/index.html
+++ b/word-search/index.html
@@ -37,7 +37,21 @@
     </style>
 </head>
 <body>
-<h1>Search English words by pattern</h1>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-58031952-14"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+
+  gtag('js', new Date());
+
+  gtag('config', 'UA-58031952-14');
+</script>
+
+<h1>Search words by pattern</h1>
 <div id="app">
     <div class="languages">
         <span>Language:</span>
