--- a/word-search/index.html
+++ b/word-search/index.html
@@ -89,7 +89,8 @@
 <script>
   const languages = {
     en: 'English',
-    ru: 'Russian'
+    ru: 'Russian',
+    uk: 'Ukrainian',
   }
   const dictionaries = {}
   for (const code in languages) {
