--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
     <div id="app" itemscope itemtype="https://schema.org/Person">
         <div id="resume">
             <header>
-                <img id="avatar" itemprop="image" v-bind:class="{large: large}" v-on:click="large = !large"
+                <img id="avatar"
+                     itemprop="image"
+                     v-bind:class="{large: large}"
+                     v-on:click="large = !large"
                     alt="Taras Labiak"
-                    src="https://scontent.flwo1-1.fna.fbcdn.net/v/t1.0-9/41124548_1957186050971018_7259873118389272576_n.jpg?_nc_cat=110&_nc_ht=scontent.flwo1-1.fna&oh=5668b04c3824193923aef38514e350e9&oe=5CD3162B" />
+                    src="https://scontent-lax3-2.cdninstagram.com/vp/420de0e08ce4d9bfa7dae3fc4ff3ab9f/5D637129/t51.2885-15/e35/39933858_2101791893371424_6712641488855917763_n.jpg?_nc_ht=scontent-lax3-2.cdninstagram.com" />
                 <div>
                     <h1>
                         <span itemprop="givenName">Taras</span>
