--- a/word-search/index.html
+++ b/word-search/index.html
@@ -91,6 +91,7 @@
     en: 'English',
     ru: 'Russian',
     uk: 'Ukrainian',
+    pl: 'Polish', // https://en.wiktionary.org/wiki/Wiktionary:Frequency_lists/Polish_wordlist
   }
   const dictionaries = {}
   for (const code in languages) {
