--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
         integrity="sha256-ui3vFTgbIIvd9ePh+wF+ju05O3jympV4FyFlpNMV2cw=" crossorigin="anonymous"></script>
     <script src="https://kissarat.github.io/script.js"></script>
     <div id="hired" style="opacity: 0; display: none">
-        <h1>I am hired by <a href="http://www.ukeess.com/">UKEESS</a></h1>
+        <h1>I am hired</h1>
+        <button type="button">OK</button>
     </div>
 </body>
 
