--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                      v-bind:class="{large: large}"
                      v-on:click="large = !large"
                     alt="Taras Labiak"
-                    src="https://scontent-lax3-2.cdninstagram.com/vp/420de0e08ce4d9bfa7dae3fc4ff3ab9f/5D637129/t51.2885-15/e35/39933858_2101791893371424_6712641488855917763_n.jpg?_nc_ht=scontent-lax3-2.cdninstagram.com" />
+                    src="http://i.imgur.com/lkuglvm.jpg" />
                 <div>
                     <h1>
                         <span itemprop="givenName">Taras</span>
