--- a/samples/auto-rotate.html
+++ b/samples/auto-rotate.html
@@ -2,26 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name='viewport' content='width=device-width'/>
     <title>Auto Rotate</title>
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled"/>
     <style>
         body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             text-align: center;
             font-family: sans-serif;
             font-size: 20px;
         }
 
+        body > * {
+            margin-bottom: 16px;
+        }
+
         div {
-            display: inline-block;
-            width: 360px;
-            height: 360px;
+            width: 240px;
+            height: 240px;
             background-color: black;
             color: white;
+        }
+
+        button {
+            border: 1px solid black;
+            background-color: white;
+            width: 180px;
+            height: 30px;
         }
     </style>
 </head>
 <body>
 <div id="area"></div>
+<button type="button" id="portrait">Lock Portrait</button>
+<button type="button" id="landscape">Lock Landscape</button>
+<button type="button" id="unlock">Unlock</button>
 <script>
     function showOrientation() {
         area.innerHTML = `Type: ${screen.orientation.type}<br/>Angle: ${screen.orientation.angle}`;
@@ -29,6 +46,10 @@
 
     addEventListener('orientationchange', showOrientation);
     showOrientation();
+
+    portrait.addEventListener('click', () => screen.orientation.lock('portrait'));
+    landscape.addEventListener('click', () => screen.orientation.lock('landscape'));
+    unlock.addEventListener('click', () => screen.orientation.unlock());
 </script>
 </body>
 </html>
