--- a/samples/auto-rotate.html
+++ b/samples/auto-rotate.html
@@ -15,11 +15,7 @@
             font-size: 20px;
         }
 
-        body > * {
-            margin-bottom: 16px;
-        }
-
-        div {
+        #area {
             width: 240px;
             height: 240px;
             background-color: black;
@@ -29,16 +25,17 @@
         button {
             border: 1px solid black;
             background-color: white;
-            width: 180px;
-            height: 30px;
+            width: 150px;
+            height: 24px;
+            margin-top: 8px;
         }
     </style>
 </head>
 <body>
 <div id="area"></div>
-<button type="button" id="portrait">Lock Portrait</button>
-<button type="button" id="landscape">Lock Landscape</button>
-<button type="button" id="unlock">Unlock</button>
+<div id="controls">
+    <button type="button" id="unlock">unlock</button>
+</div>
 <script>
     function showOrientation() {
         area.innerHTML = `Type: ${screen.orientation.type}<br/>Angle: ${screen.orientation.angle}`;
@@ -47,9 +44,12 @@
     addEventListener('orientationchange', showOrientation);
     showOrientation();
 
-    portrait.addEventListener('click', () => screen.orientation.lock('portrait'));
-    landscape.addEventListener('click', () => screen.orientation.lock('landscape'));
-    unlock.addEventListener('click', () => screen.orientation.unlock());
+    for(const name of ['portrait', 'landscape', 'portrait-primary', 'portrait-secondary']) {
+        const button = document.createElement('button');
+        button.innerHTML = name;
+        button.addEventListener('click', () => screen.orientation.lock(name));
+        controls.appendChild(button);
+    }
 </script>
 </body>
 </html>
