--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <div>
                             <div>2002 - 2006</div>
                             <div>
-                                High school degree | Technical Liceum
+                                High school degree | Technical Lyceum
                             </div>
                         </div>
                     </dd>
