--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <span itemprop="familyName">Labiak</span>
                     </h1>
                     <button style="display: none" class="english" type="button">EN</button>
-                    <h2 class="notranslate">PHP, Node.js, Python Full Stack Developer</h2>
+                    <h2 class="notranslate">Node.js, PHP, Python Full Stack Developer</h2>
                     <!--<a class="export">PDF</a>-->
                     <div class="abstract">
                         <div class="tile age">
@@ -300,3 +300,5 @@
 </body>
 
 </html>
+
+<!-- Copyright (c) 2019, Taras Labiak -->
